logs/backend-dev.err.log
F:\Adyapan AI\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/controllers/profile.controller.ts(26,14): error TS2339: Property 'file' does not exist on type 'Request<ParamsDictionary, any, any, ParsedQs, Record<string, any>>'.
src/controllers/profile.controller.ts(31,39): error TS2339: Property 'file' does not exist on type 'Request<ParamsDictionary, any, any, ParsedQs, Record<string, any>>'.
src/controllers/profile.controller.ts(32,28): error TS2339: Property 'file' does not exist on type 'Request<ParamsDictionary, any, any, ParsedQs, Record<string, any>>'.

    at createTSError (F:\Adyapan AI\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (F:\Adyapan AI\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (F:\Adyapan AI\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (F:\Adyapan AI\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (F:\Adyapan AI\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:2002:10
    at Object.require.extensions.<computed> [as .ts] (F:\Adyapan AI\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1594:32)
    at Module._load (node:internal/modules/cjs/loader:1396:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19) {
  diagnosticCodes: [ 2339, 2339, 2339 ]
}
